--- a/app/src/main/res/layout/activity_story_list.xml
+++ b/app/src/main/res/layout/activity_story_list.xml
@@ -33,9 +33,9 @@
         android:textAllCaps="false"
         android:drawableLeft="@drawable/add"
         android:drawablePadding="5dp"
-        android:textSize="20sp"
-        android:fontFamily="@font/aleo"
+        android:textSize="18sp"
         android:textColor="#191213"
+        android:fontFamily="@font/jetbrains_mono_semibold"
         />
     <ListView
         android:id="@+id/memo_list"
