--- a/app/src/main/res/layout/activity_add_job.xml
+++ b/app/src/main/res/layout/activity_add_job.xml
@@ -178,7 +178,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:text="@string/delete"
+                    android:text="Delete"
                     android:textAllCaps="false"
                     android:textColor="#fff"
                     android:textSize="16sp"
