--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -113,6 +113,7 @@
                 android:paddingBottom="5dp"
                 android:orientation="horizontal"/>
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
@@ -136,6 +137,7 @@
 
             </LinearLayout>
             <TextView
+                android:visibility="gone"
                 android:id="@+id/l4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
