--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -9,8 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_height="60dp"
+        android:padding="5dp"
         android:elevation="5dp"
         android:layout_margin="2dp"
         android:background="@drawable/box_1">
@@ -25,8 +25,8 @@
             android:id="@+id/item_n"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Name Name"
-            android:textSize="20dp"
+            android:text="Name Name\ndate"
+            android:textSize="16sp"
             android:gravity="center_vertical"
             android:textColor="#fff"
             android:padding="5dp"
