--- a/app/src/main/res/layout/activity_add_job.xml
+++ b/app/src/main/res/layout/activity_add_job.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/gradient_blue"
         android:gravity="center_vertical"
         android:fontFamily="@font/timesbd"
-        android:drawableRight="@drawable/success"
+        android:drawableRight="@drawable/job"
         android:padding="10dp"/>
     <ScrollView
         android:layout_width="match_parent"
