--- a/app/src/main/res/layout/activity_add_video.xml
+++ b/app/src/main/res/layout/activity_add_video.xml
@@ -1,9 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddVideo">
+    tools:context=".AddVideo"
+    android:orientation="vertical"
+    >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="A new Video"
+        android:textSize="25dp"
+        android:textColor="#fff"
+        android:background="@drawable/gradient_blue"
+        android:gravity="center_vertical"
+        android:fontFamily="@font/timesbd"
+        android:drawableRight="@drawable/success"
+        android:padding="10dp"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginHorizontal="10dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/l1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Video Title"
+                    android:padding="10dp"
+                    android:textColor="#000"
+                    android:textSize="16sp"
+                    android:textAlignment="center"
+                    />
+                <EditText
+                    android:id="@+id/fm_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:padding="10dp"
+                    android:textColor="#000"
+                    android:textSize="16sp"
+                    />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/l3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Details"
+                android:padding="10dp"
+                android:textColor="#000"
+                android:textSize="16sp"
+                android:background="#F1EFEF"
+                android:layout_marginHorizontal="10dp"
+                />
+            <EditText
+                android:layout_marginHorizontal="10dp"
+                android:id="@+id/fm_details"
+                android:layout_width="match_parent"
+                android:lines="2"
+                android:layout_height="wrap_content"
+                android:hint="Enter the description"
+                android:padding="10dp"
+                android:textSize="16sp"
+                android:layout_margin="10dp"
+
+                />
+
+            <EditText
+                android:id="@+id/vid_url_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Past the Video link"
+                android:layout_marginHorizontal="10dp"
+                />
+            <Button
+                android:id="@+id/vid_check"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Check Video"
+                android:textAllCaps="false"
+                android:textColor="#000"
+                android:textSize="18dp"
+                android:padding="10dp"
+                android:background="@drawable/gradient_light"
+                android:layout_margin="5dp"/>
+            <WebView
+                android:id="@+id/vid_1"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+
+                >
+                <Button
+                    android:id="@+id/fm_save"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="@string/save"
+                    android:textAllCaps="false"
+                    android:textColor="#fff"
+                    android:textSize="16sp"
+                    android:padding="10dp"
+                    android:background="@drawable/box_7"
+                    android:layout_marginHorizontal="10dp"/>
+
+                <Button
+                    android:visibility="gone"
+                    android:id="@+id/fm_del"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="@string/delete"
+                    android:textAllCaps="false"
+                    android:textColor="#fff"
+                    android:textSize="16sp"
+                    android:padding="10dp"
+                    android:background="@drawable/box_4"
+                    android:layout_marginHorizontal="10dp"/>
+                <Button
+                    android:id="@+id/fm_cancel"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cancel"
+                    android:textAllCaps="false"
+                    android:textColor="#fff"
+                    android:textSize="16sp"
+                    android:padding="10dp"
+                    android:background="@drawable/box_5"/>
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </ScrollView>
+
+</LinearLayout>
