--- a/app/src/main/res/layout/activity_user_page.xml
+++ b/app/src/main/res/layout/activity_user_page.xml
@@ -40,8 +40,8 @@
                 android:gravity="center"
                 android:textAllCaps="false"
                 android:fontFamily="@font/jetbrains_mono_semibold"
-                android:drawableLeft="@drawable/job"
                 android:padding="10dp"
+                android:drawableLeft="@drawable/job"
                 android:text="Jobs"
                 android:textColor="#0723B3"
                 android:drawablePadding="10dp"
@@ -94,7 +94,7 @@
                 android:background="@drawable/box_3"
                 android:padding="10dp"
                 android:fontFamily="@font/jetbrains_mono_semibold"
-                android:text="Training material"
+                android:text="Training"
                 android:drawableLeft="@drawable/train"
                 android:textAllCaps="false"
                 android:textColor="#0723B3"
