--- a/app/src/main/res/layout/activity_add_video.xml
+++ b/app/src/main/res/layout/activity_add_video.xml
@@ -38,7 +38,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Video Title"
+                    android:text="Title"
                     android:padding="10dp"
                     android:textColor="#000"
                     android:textSize="16sp"
