--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -17,8 +17,8 @@
         android:background="@drawable/box_1"
         />
     <fragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"/>
 </LinearLayout>
