--- a/app/src/main/res/layout/activity_support_list.xml
+++ b/app/src/main/res/layout/activity_support_list.xml
@@ -35,7 +35,7 @@
         android:textSize="18sp"
         android:textColor="#191213"
         />
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/memo_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
